added rough drafting for access request

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.4",
+    "@uvdsl/solid-access-requests": "^0.0.1",
     "@uvdsl/solid-oidc-client-browser": "^0.2.1",
     "@uvdsl/solid-rdf-store": "^0.1.3",
     "@uvdsl/solid-requests": "^0.0.7",
